# kivy

./: (chat_app.py)  .clang-format  .coverage.gala-ubuntu-hyperv.11062.207879  .coverage.gala-ubuntu-hyperv.11062.301936  .coverage.gala-ubuntu-hyperv.11062.508196  .coverage.gala-ubuntu-hyperv.11062.951317  .deepsource.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  CalculatorLayout  Calendar  FAQ.md  Information= info  LICENSE  MACPORTS_README.txt  MANIFEST.in  Makefile  PHASE_2_IOS_DESIGN.md  README  README-RU.md  README.md  README.rst  SECURITY.md  appveyor.yml  control  fix-androidjoysticks.patch  generate.py  kivy-doc-pdf.docs  kivy-doc.docs  kivy-examples.install  (+23 more)
kivy/: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  __init__.py  _clock.pxd  _clock.pyx  _event.pxd  _event.pyx  _metrics.pxd  _metrics.pyx  _version.py  adapter.py  animation.py  app.py  app_async.py  atlas.py  base.py  base_async.py  binding.py  cache.py  clock.py  clock_async.py  compat.py  config.py  context.py  css_selectors.py  enums.py  event.py  event.pyx  exceptions.py  factory.py  factory_registers.py  garden.py  geometry.py  gesture.py  guievents.py  interactive.py  lang.py  linux_metrics.py  loader.py  (+29 more)
kivy/.ci/: osx_ci.sh  windows_ci.ps1
kivy/.github/: CONTRIBUTING.md  config.yml  move.yml
kivy/adapters/: __init__.py  adapter.py  args_converters.py  collectionadapter.py  dict_ops.py  dictadapter.py  list_op_handler.py  list_ops.py  listadapter.py  models.py  objectadapter.py  selection.py  simplelistadapter.py  transformadapter.py  util.py
kivy/c_ext/: __init__.py  buffer.pyx  c_opengl.pxd  event.pyx  graphics.pyx  graphics_canvas.pxd  graphics_canvas.pyx  graphics_common.pxi  graphics_context.pxd  graphics_context.pyx  graphics_instr_base.pxd  graphics_instr_base.pyx  graphics_instr_path.pxd  graphics_instr_path.pyx  graphics_instr_vdi.pxd  graphics_instr_vdi.pyx  graphics_instruction.pxd  graphics_instruction.pyx  graphics_matrix.pxd  graphics_matrix.pyx  graphics_shader.pxd  graphics_shader.pyx  graphics_vbo.pxd  graphics_vbo.pyx  graphics_vertex.pxd  graphics_vertex.pyx  properties.pyx  transformations.c
kivy/controllers/: controller.py  dictcontroller.py  list_ops.py  listcontroller.py  objectcontroller.py  transformcontroller.py  utils.py
kivy/core/: __init__.py  sdl.pyx
kivy/data/: settings_kivy.json  style.kv  style.uxl
kivy/doc/: doc-requirements.txt
kivy/effects/: __init__.py  dampedscroll.py  kinetic.py  opacityscroll.py  scroll.py
kivy/eventmanager/: __init__.py  hover.py
kivy/ext/: __init__.py
kivy/extras/: highlight.py
kivy/garden/: __init__.py
kivy/graphics/: __init__.py  boxshadow.pxd  boxshadow.pyx  buffer.pxd  buffer.pyx  c_opengl.pxd  c_opengl_debug.pxd  c_opengl_debug.pyx  c_opengl_def.pxd  c_opengl_dynamic.pxd  c_opengl_dynamic.pyx  c_opengl_mock.pxd  c_opengl_mock.pyx  c_opengl_profiling.pxd  c_opengl_profiling.pyx  carray.pxd  carray.pyx  cgl.h  cgl.pxd  cgl.pyx  cgl_debug.pyx  cgl_gl.pyx  cgl_glew.pyx  cgl_mock.pyx  cgl_sdl2.pyx  cgl_static.pyx  common.pxi  common_subset.h  compiler.pxd  compiler.pyx  config.pxi  context.pxd  context.pyx  context_instructions.pxd  context_instructions.pyx  fbo.pxd  fbo.pyx  gl_debug_logger.pxi  gl_instructions.pyx  gl_mock.h  (+36 more)
kivy/highlight/: highlight.py
kivy/include/: common_subset.h  gl_redirect.h
kivy/input/: __init__.py  factory.py  motionevent.py  provider.py  recorder.py  shape.py  touch.py
kivy/kivy/: _clock.pxd  _clock.pyx  _event.pxd  _metrics.pyx  base.py  clock.py  config.py  context.py  factory.py  factory_registers.py  geometry.py  interactive.py  loader.py  multistroke.py  properties.pxd  properties.pyx  utils.py
kivy/lang/: __init__.py  _speed.pyx  ast_compiler.py  builder.py  parser.py
kivy/lib/: __init__.py  ddsfile.py  debug.py  glfw.pxi  imghdr.py  kivy_endian.h  mtdev.py  pangoft2.h  pangoft2.pxi  sdl2.pxi  sdl3.pxi  squirtle.py  transformations.py
kivy/mobile/: __init__.py
kivy/modules/: __init__.py  _webdebugger.py  closeapp.py  console.py  cursor.py  feedback.py  heatmap.py  inspector.py  joycursor.py  keybinding.py  mjpegserver.py  monitor.py  recorder.py  recordvideo.py  screen.py  showborder.py  sleep.py  touchinfo.py  touchring.py  webdebugger.py
kivy/network/: __init__.py  curl.pyx  newurlrequest.py  urlrequest.py
kivy/storage/: __init__.py  dictstore.py  jsonstore.py  redisstore.py
kivy/tests/: __init__.py  async_common.py  bench_thorvg_wrapper.py  common.py  conftest.py  fixtures.py  perf_test_textinput.py  pytest.ini  test_adapters.py  test_animations.py  test_app.py  test_app_fbo_pixelcolor.py  test_app_on_ready.py  test_atlas.py  test_audio.py  test_audio_provider.py  test_benchmark.py  test_buttonbehavior.py  test_cache.py  test_clipboard.py  test_clock.py  test_clock_triggered.py  test_compat.py  test_config.py  test_controllers.py  test_core_svg.py  test_core_video_ffpyplayer.py  test_coverage.py  test_doc_gallery.py  test_effects.py  test_environ_cli.py  test_fbo_py2py3.py  test_filechooser.py  test_filechooser_unicode.py  test_fixtures.py  test_fonts.py  test_garden.py  test_gesture.py  test_graphics.py  test_graphics_svg.py  (+89 more)
kivy/tools/: __init__.py  benchmark.py  build_linux_dependencies.sh  changelog_parser.py  coverage.py  create-testimages.sh  gallery.py  garden  garden.bat  generate-icons.py  kvcompiler.py  kviewer  kviewer.py  report.py  stub-gl-debug.py  texturecompress.py
kivy/uix/: __init__.py  abstractview.py  accordion.py  actionbar.py  anchorlayout.py  behaviors.py  boxlayout.py  bubble.py  button.py  camera.py  carousel.py  checkbox.py  codeinput.py  colorpicker.py  combobox.py  dictview.py  dropdown.py  effectwidget.py  filechooser.py  fileselector.py  floatlayout.py  gesturebox.py  gesturesurface.py  gridlayout.py  image.py  inkcanvas.py  label.py  layout.py  listview.py  lottie.py  modalview.py  numpad.py  objectview.py  observerview.py  pagelayout.py  popup.py  progressbar.py  rangeslider.py  (+34 more)
(+1631 files in other folders)
