[build-system]
requires = [
    "setuptools>=75.1.0",   # latest setuptools
    "wheel>=0.45.1",        # latest wheel
    "packaging>=24.2",      # latest packaging
    "cython>=3.2.0",        # সর্বশেষ stable Cython
    'kivy_deps.gstreamer_dev>=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3_dev>=0.0.7; sys_platform == "win32"',
    'kivy_deps.glew_dev>=0.3.1; sys_platform == "win32"',
    'kivy_deps.gstreamer>=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3>=0.0.7; sys_platform == "win32"',
    'kivy_deps.glew>=0.3.1; sys_platform == "win32"',
]

[tool.pytest.ini_options]
addopts = """
    --benchmark-skip
    --benchmark-warmup=on
    --benchmark-warmup-iterations=5
    --benchmark-disable-gc
    --benchmark-name=short
    --benchmark-sort=mean
    --benchmark-group-by=fullfunc
    --benchmark-storage=.benchmarks-kivy
    --benchmark-save=kivy
"""
markers = [
    "incremental: mark a test as incremental."
]

[tool.ruff]
exclude = [
    "__pycache__",
    ".tox",
    ".git/",
    "doc/",
    "build/",
    ".eggs/",
    "venv/",
]
lint.extend-ignore = [
    "E402",  # module level import not at top
    "E722",  # bare except
    "E731",  # lambda assignment
    "E741",  # ambiguous variable name
    "F401",  # unused import
    "F841",  # unused variable
]
lint.select = [
    "E",
    "F",
    "W",
]
