[build-system]
requires = [
    "setuptools~=80.10.2",
    "wheel~=0.45.1",
    "packaging~=25.0",
    "cython>=0.29.1,<=3.2.0",
    'kivy_deps.gstreamer_dev~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3_dev~=0.0.9; sys_platform == "win32"',
    'kivy_deps.glew_dev~=0.3.1; sys_platform == "win32"',
    'kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3~=0.0.9; sys_platform == "win32"',
    'kivy_deps.glew~=0.3.1; sys_platform == "win32"',
]

[tool.cibuildwheel.ios]
before-all = "kivy/.ci/ios_frameworks.sh"

[tool.cibuildwheel.android]
# Use cp to skip the default repair (which requires API 24+ for libc++_shared.so)
# The Android app bundles libc++_shared.so separately
environment = { ANDROID_API_LEVEL = "21" }
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.pytest.ini_options]
addopts = "--benchmark-skip --benchmark-warmup=on --benchmark-warmup-iterations=5 --benchmark-disable-gc --benchmark-name=short --benchmark-sort=mean --benchmark-group-by=fullfunc --benchmark-storage=.benchmarks-kivy --benchmark-save=kivy"
markers = "incremental: mark a test as incremental."
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    "__pycache__",
    ".tox",
    ".git/",
    "doc/",
    "build/",
    ".eggs/",
    "venv/",
]
lint.extend-ignore = [
    "E402",
    "E722",
    "E731",
    "E741",
    "F401",
    "F841",
]
lint.select = [
    "E",
    "F",
    "W",
]
