[build-system]
requires = [
    "setuptools~=82.0.0",
    "wheel~=0.47.0",
    "packaging~=26.0",
    "cython>=0.29.1,<=3.2.0",
    'tomli; python_version < "3.11"',
    'kivy_deps.gstreamer_dev~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3_dev~=0.1.0; sys_platform == "win32"',
    'kivy_deps.glew_dev~=0.3.1; sys_platform == "win32"',
    'kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3~=0.1.0; sys_platform == "win32"',
    'kivy_deps.glew~=0.3.1; sys_platform == "win32"',
]

[project]
name = "Kivy"
dynamic = ["version"]
description = "An open-source Python framework for developing GUI apps that work cross-platform, including desktop, mobile and embedded platforms."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kivy Team and other contributors", email = "kivy-dev@googlegroups.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Artistic Software",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    'Kivy-Garden>=0.1.4',
    'docutils',
    'pygments',
    'requests',
    'filetype',
    'kivy_deps.angle~=0.5.0; sys_platform == "win32"',
    'kivy_deps.sdl3~=0.1.0; sys_platform == "win32"',
    'kivy_deps.glew~=0.3.1; sys_platform == "win32"',
    'pypiwin32; sys_platform == "win32"',
]

[project.urls]
Homepage = "http://kivy.org"
Source = "https://github.com/kivy/kivy"
Documentation = "https://kivy.org/doc/stable/"
"Bug Reports" = "https://github.com/kivy/kivy/issues"

[project.optional-dependencies]
tuio = ["oscpy"]
dev = [
    "pytest>=3.6",
    "pytest-cov",
    "pytest_asyncio!=0.11.0",
    "pytest-timeout",
    "pytest-benchmark",
    "pytest-httpserver==1.1.5",
    "trustme==1.2.1",
    "pyinstaller",
    'kivy_deps.gstreamer_dev~=0.3.3; sys_platform == "win32"',
    'kivy_deps.sdl3_dev~=0.1.0; sys_platform == "win32"',
    'kivy_deps.glew_dev~=0.3.1; sys_platform == "win32"',
    "pre-commit",
    "responses",
    "ruff>=0.8.3,<1.0.0",
    'tomli; python_version < "3.11"',
]
docs = [
    "sphinx==9.1.0"
]
base = ["pillow>=9.5.0,<12"]
media = [
    'kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"',
    # todo(cclauss): modify when python3.14 -m pip install ffpyplayer works
    'ffpyplayer; (sys_platform == "linux" or sys_platform == "darwin") and python_version < "3.14"',
]
full = [
    "pillow>=9.5.0,<12",
    'kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"',
    # todo(cclauss): modify when python3.14 -m pip install ffpyplayer works
    'ffpyplayer; (sys_platform == "linux" or sys_platform == "darwin") and python_version < "3.14"',
]
# don't use kivy_deps.gstreamer 0.4.0 because it was deleted
gstreamer = ['kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"']
angle = ['kivy_deps.angle~=0.5.0; sys_platform == "win32"']
glew = ['kivy_deps.glew~=0.3.1; sys_platform == "win32"']

[tool.setuptools.packages.find]
# Constrain automatic package discovery to Kivy only. Without this, the
# flat repo layout (kivy/, packaging/, build artifacts) makes setuptools'
# auto-discovery bail out with "Multiple top-level packages discovered".
# This also keeps standalone setup() calls that read this pyproject
# (e.g. .ci/thorvg_wrapper_build.py) working.
include = ["kivy*"]
namespaces = false

[tool.kivy]
cython_min = "0.29.1"
cython_max = "3.2.0"
cython_exclude = ""
python_versions = "3.11 - 3.14"

[tool.cibuildwheel.android]
# Use cp to skip the default repair (which requires API 24+ for libc++_shared.so)
# The Android app bundles libc++_shared.so separately
environment = { ANDROID_API_LEVEL = "21" }
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.coverage.run]
parallel = true
branch = true
omit = [
    "*/pyinstaller/*_widget/*",
]
plugins = [
    "kivy.tools.coverage",
]
concurrency = ["thread", "multiprocessing"]

[tool.pytest.ini_options]
addopts = "--benchmark-skip --benchmark-warmup=on --benchmark-warmup-iterations=5 --benchmark-disable-gc --benchmark-name=short --benchmark-sort=mean --benchmark-group-by=fullfunc --benchmark-storage=.benchmarks-kivy --benchmark-save=kivy"
markers = "incremental: mark a test as incremental."
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    "__pycache__",
    ".tox",
    ".git/",
    "doc/",
    "build/",
    ".eggs/",
    "venv/",
]
lint.extend-ignore = [
    "E402",
    "E722",
    "E731",
    "E741",
    "F401",
    "F841",
]
lint.select = [
    "E",
    "F",
    "W",
]
