[kivy]
cython_min=0.29.1
cython_max=3.2.0
cython_exclude=
python_versions=3.9 - 3.13

[coverage:run]
parallel = True
branch = True
omit =
    */pyinstaller/*_widget/*
plugins =
    kivy.tools.coverage
concurrency = thread, multiprocessing

[options]
python_requires = >=3.9
install_requires =
    Kivy-Garden>=0.1.4
    docutils
    pygments
    requests
    filetype
    kivy_deps.angle~=0.5.0; sys_platform == "win32"
    kivy_deps.sdl3~=0.0.9; sys_platform == "win32"
    kivy_deps.glew~=0.3.1; sys_platform == "win32"
    pypiwin32; sys_platform == "win32"

[options.extras_require]
tuio = oscpy
dev =
    pytest>=3.6
    pytest-cov
    pytest_asyncio!=0.11.0
    pytest-timeout
    pytest-benchmark
    pyinstaller
    sphinx~=9.1.0
    sphinxcontrib-jquery~=4.1
    kivy_deps.gstreamer_dev~=0.3.3; sys_platform == "win32"
    kivy_deps.sdl3_dev~=0.0.9; sys_platform == "win32"
    kivy_deps.glew_dev~=0.3.1; sys_platform == "win32"
    pre-commit
    responses
    ruff>=0.8.3,<1.0.0
base =
    pillow>=9.5.0,<12
media =
    kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"
    # todo(cclauss): modify when python3.14 -m pip install ffpyplayer works
    ffpyplayer; (sys_platform == "linux" or sys_platform == "darwin") and python_version < "3.14"
full =
    pillow>=9.5.0,<12
    kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"
    # todo(cclauss): modify when python3.14 -m pip install ffpyplayer works
    ffpyplayer; (sys_platform == "linux" or sys_platform == "darwin") and python_version < "3.14"
gstreamer =
    kivy_deps.gstreamer~=0.3.3; sys_platform == "win32"
    # don't use 0.4.0 because it was deleted
angle =
    kivy_deps.angle~=0.5.0; sys_platform == "win32"
glew =
    kivy_deps.glew~=0.3.1; sys_platform == "win32"

